fix bernie head (see error on mobile bernie.atticuswhite.com)

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -8,9 +8,10 @@
   }
 
   .bernie-face {
-    border-radius: 50%;
     overflow: hidden;
+    text-align: center;
     img {
+      border-radius: 50%;
       max-width: 100%;
     }
   }
